lior update